# gpu-room

./: .gitignore  CMakeLists.txt  Shader.h  Texture.cpp  error.cpp  error.h  fragment.glsl  room.cpp  room.h  vertex.glsl
include/glad/: glad.c  glad.h
shaders/: fragment.glsl
src/: room.cpp  room.h
src/entities/: BasicCamera.cpp  BasicCamera.h  Shader.h  Texture.cpp  Texture.h
